deploy: yarelm/blog@24b99404902458449d2fa2fa2b210025c448d7c6

--- a/heading-towards-cloud-native-environments-1/index.html
+++ b/heading-towards-cloud-native-environments-1/index.html
@@ -95,8 +95,7 @@
         <div class="post-content clearfix" itemprop="articleBody">
     
 
-    <h2 id="heading-towards-cloud-native-developer-environments-part-1--the-why">Heading Towards Cloud-Native Developer Environments [Part 1 — The Why]</h2>
-<p>In many cloud-based software development projects, a CI/CD process is designed and maintained for deploying applications in an efficient, safe, and productive manner to cloud environments.</p>
+    <p>In many cloud-based software development projects, a CI/CD process is designed and maintained for deploying applications in an efficient, safe, and productive manner to cloud environments.</p>
 <p>The main focus around the CI/CD process is often on the cloud/remote side, but seldom we talk about the phase that comes right before CI/CD, which is the local development and testing done on the developer’s laptop.</p>
 <p>In this article, I’ll show why many common methods for local development are <strong>far from ideal</strong>, and I’ll present a demo for an alternate, cloud-native approach which will improve your (or your developers’) productivity. 🌤</p>
 <p><img src="https://cdn-images-1.medium.com/max/12032/0*uOwC8XfHT4_yAex9" alt="Photo by Christina @ wocintechchat.com on Unsplash"></p>
@@ -196,7 +195,7 @@
 <h3 id="personal-environments-or-ephemeral-environments-">Personal environments or ephemeral environments? 👀</h3>
 <p>The simple answer is that it’s up to you.</p>
 <p>Basically, with personal environments, you are dedicating an environment for a specific person for a long-term purpose. While with ephemeral environments, you are creating an environment for a specific <strong>change</strong> (which gets destroyed after you merge that change).</p>
-<p>My colleague <a href="undefined">Mike Sparr</a> wrote a great <a href="https://blog.doit-intl.com/recreating-heroku-ci-cd-review-apps-on-google-cloud-platform-845fa0957232?source=friends_link&amp;sk=f84712c1579d96be64edd4ceb6f2ff2f">article</a> on ephemeral environments and you should check that out as well.</p>
+<p>My colleague Mike Sparr wrote a great <a href="https://blog.doit-intl.com/recreating-heroku-ci-cd-review-apps-on-google-cloud-platform-845fa0957232?source=friends_link&amp;sk=f84712c1579d96be64edd4ceb6f2ff2f">article</a> on ephemeral environments and you should check that out as well.</p>
 <p>You could definitely do both — though that might be an overkill for your needs.</p>
 <p>In <a href="https://blog.doit-intl.com/heading-towards-cloud-native-developer-environments-part-2-how-51b09f70c7fa">Part 2</a>, I will illustrate such a setup using an example architecture, using Terraform, ArgoCD, and Telepresence. <a href="https://blog.doit-intl.com/heading-towards-cloud-native-developer-environments-part-2-how-51b09f70c7fa">Go to Part 2!</a></p>
 
