deploy: yarelm/blog@3a30579334045cb67983c08fb829e5b5973e17da

--- a/ebpf-cilium-2/index.html
+++ b/ebpf-cilium-2/index.html
@@ -91,7 +91,7 @@
         <div class="post-content clearfix" itemprop="articleBody">
     
 
-    <p>I hope you enjoyed reading about eBPF in <a href="https://blog.doit-intl.com/ebpf-cilium-dataplane-v2-and-all-that-buzz-part-1-2-1eb4255391da">Part 1</a>! Now let’s examine Cilium as a popular K8s eBPF solution and find out how it relates to Dataplane V2.</p>
+    <p>I hope you enjoyed reading about eBPF in <a href="https://www.yarelm.com/ebpf-cilium/">Part 1</a>! Now let’s examine Cilium as a popular K8s eBPF solution and find out how it relates to Dataplane V2.</p>
 <p><a href="https://cilium.io/">Cilium</a> 🐝 is a “hot” technology that’s powered by eBPF. It’s often the first thing mentioned when eBPF comes up, more so in the context of K8s. Cilium is basically open-source software that acts as a <a href="https://github.com/containernetworking/cni">CNI plugin</a> for Kubernetes. It provides eBPF-based networking, observability, and security with optimal scale and performance for platform teams operating Kubernetes environments on the cloud and on-premise.</p>
 <p><img src="https://cdn-images-1.medium.com/max/3840/1*S-VljUlIBFiKR30CBDA78A.jpeg" alt=""></p>
 <blockquote>
