--- a/ebpf-cilium/index.html
+++ b/ebpf-cilium/index.html
@@ -94,7 +94,7 @@
     <p>If you’re following the latest cloud computing trends, you’ve probably come across the eBPF term quite a lot. It’s hard not to notice it. Let’s learn why.</p>
 <p>Looking for a modern security, observability, and monitoring solution, while maintaining optimal performance? eBPF might be the answer! This article will dive into why this Linux Kernel feature has become one of the top buzzwords for the cloud-native stack. We’ll also explore a popular off-the-shelf cloud solution that is powered by eBPF and examine how it can empower your cloud system security, observability, and monitoring. So let’s give that buzz a buzz!</p>
 <p><img src="https://cdn-images-1.medium.com/max/3840/1*sUNb0u0Jl9BgOHlv-owy0w.jpeg" alt=""></p>
-<p><em>If you are already familiar with eBPF and are interested in reading about Cilium/Dataplane V2, feel free to skip to <a href="https://blog.doit-intl.com/ebpf-cilium-dataplane-v2-and-all-that-buzz-part-2-8bcbee51720d">Part 2</a>!</em></p>
+<p><em>If you are already familiar with eBPF and are interested in reading about Cilium/Dataplane V2, feel free to skip to <a href="https://www.yarelm.com/ebpf-cilium-2/">Part 2</a>!</em></p>
 <p><a href="https://ebpf.io/">eBPF</a> belongs to the Linux Kernel space, a domain where most of us don’t hang out. So why should a person who is “up in the cloud” even care about such a low-level Linux Kernel feature? Well, the truth is that eBPF is a kind of a revolution. It has a massive impact on both low-level and high-level areas.</p>
 <p><em><strong>For example, let’s say you want to write some custom logic that needs to closely inspect all network packets traveling between your containers and only allow HTTP packets with specific criteria to go through.</strong></em></p>
 <p>It’s common knowledge that you should be in the kernel space if you are looking to merge, inject and limit network traffic. The Linux Kernel is the place to manipulate the inner working of the Linux OS and its massive networking layer, which is built for performance, security, and reliability.</p>
@@ -138,7 +138,7 @@
 <p><a href="https://pixielabs.ai/">Pixie</a> — Application troubleshooting platform for Kubernetes (check it out!)</p>
 </li>
 </ul>
-<p>I hope you found this information useful. This <a href="https://ebpf.io/projects">list</a> shows additional projects that are powered by eBPF. In <a href="https://blog.doit-intl.com/ebpf-cilium-dataplane-v2-and-all-that-buzz-part-2-8bcbee51720d">Part 2</a>, we’ll explore Cilium as a popular K8s eBPF solution and figure out what Dataplane V2 has to do with it.</p>
+<p>I hope you found this information useful. This <a href="https://ebpf.io/projects">list</a> shows additional projects that are powered by eBPF. In <a href="https://www.yarelm.com/ebpf-cilium-2/">Part 2</a>, we’ll explore Cilium as a popular K8s eBPF solution and figure out what Dataplane V2 has to do with it.</p>
 
 </div>
 
