--- a/ebpf-cilium-2/index.html
+++ b/ebpf-cilium-2/index.html
@@ -146,6 +146,8 @@
 <p>From the testing I have done, some Cilium features seem to work on Dataplane V2. However, there’s no official Google support. Needless to say, “uncharted” Cilium features on Dataplane V2 could work today, but may break unexpectedly at any given time. Hence, it’s best we don’t enter uncharted waters. Just follow the official docs to be on the safe side.</p>
 <h2 id="vanilla-cilium-or-dataplane-v2-">Vanilla Cilium or Dataplane V2? 🤔</h2>
 <p>Here’s a feature comparison:</p>
+<script type="application/javascript" src="https://gist.github.com/yarelm/a9e9b5ab51ee2b8a79b8c16acb4444ba.js"></script>
+
 <!-- raw HTML omitted -->
 <p>The common features of both Cillium and Dataplane V2 currently are:</p>
 <ul>
