--- a/ai-first-engineering-culture/index.html
+++ b/ai-first-engineering-culture/index.html
@@ -94,56 +94,36 @@
     <p>🤔 As a manager, how do you transform your engineering culture to be AI-first?</p>
 <p>You probably believe that AI is a huge productivity boost for engineers. And that engineers who do not adopt AI will find themselves with a huge disadvantage in the near future.</p>
 <p>You have a really good point there. But why is that not enough to move the needle?</p>
-<p>In every org, there are the &ldquo;AI skeptical&rdquo; engineers.</p>
+<p>In every org, there are the &ldquo;<strong>AI skeptical</strong>&rdquo; engineers.</p>
 <p>These are usually senior folks, and those that tend to be more technical than others.</p>
 <p>They are the ones who&rsquo;ve seen many phases of hype over their careers, and they developed a mature level of skepticism. They say AI is slop, it&rsquo;s too hyped.</p>
-<p>To get your engineering to be AI-first, you have to crack that layer. Because they are often the more senior folks, they tend to influence where the wind is blowing within their teams. If you make them AI-first, others will follow.</p>
+<p>To get your engineering team to be AI-first, you have to <strong>crack that layer</strong>. Because they are often the more senior folks, they tend to influence where the wind is blowing within their teams. If you make them AI-first, others will follow.</p>
 <p>As a manager, you may think &ldquo;they don&rsquo;t want to use AI because they are afraid it will replace them&rdquo;, or other similar thoughts.</p>
-<p>That&rsquo;s mostly not true. I had the chance to delve into their thinking, and as a technical skeptical person myself, I can understand why they developed it. To crack them, you need to understand them too.</p>
+<p>That&rsquo;s mostly not true. I had the chance to delve into their thinking, and as a technical skeptical person myself, I can understand why they developed that skepticism. To crack them, you need to understand them too.</p>
+<h3 id="why-theyre-skeptical">Why They&rsquo;re Skeptical</h3>
 <p>Imagine the process they have gone through that reinforced their skepticism:</p>
 <ul>
-<li>
-<p>They played with vibe-coding a few times, and it ended up with shitty code. They know the meaning of it - they can&rsquo;t maintain it over time, and it&rsquo;s a tech debt factory</p>
-</li>
-<li>
-<p>All of their Linkedin feed is filled with non-technical influencers who keep bragging about AI (&ldquo;I made a website in 5 minutes, it&rsquo;s the end of software engineering&rdquo;, &ldquo;I can do everything with n8n, no-code for the win&rdquo;)</p>
-</li>
-<li>
-<p>AI-slop is everywhere.</p>
-</li>
-<li>
-<p>Some of them were handed over vibe-coded code built in 2 hours by non-technical folks asking them to make it &ldquo;production-ready&rdquo; and they know that it&rsquo;s a ticking time-bomb.</p>
-</li>
+<li>They played with vibe-coding a few times, and it ended up with shitty code. They know the meaning of it - they can&rsquo;t maintain it over time, and it&rsquo;s a tech debt factory</li>
+<li>All of their LinkedIn feed is filled with non-technical influencers who keep bragging about AI (&ldquo;I made a website in 5 minutes, it&rsquo;s the end of software engineering&rdquo;, &ldquo;I can do everything with n8n, no-code for the win&rdquo;)</li>
+<li>AI-slop is everywhere.</li>
+<li>Some of them were handed over vibe-coded code built in 2 hours by non-technical folks asking them to make it &ldquo;production-ready&rdquo; and they know that it&rsquo;s a ticking time-bomb.</li>
 </ul>
-<p>They are not wrong there. These skeptical folks have some good points, because they care about production and quality, they care about your business and want to keep the tech reliable and working.</p>
+<p>They are not wrong there. These skeptical folks have some good points, because they <strong>care about production and quality</strong>, they care about your business and want to keep the tech reliable and working.</p>
 <p>But they are wrong in allowing the skepticism to control them, preventing them from adopting AI.</p>
-<p>So, as a skeptical person who was an early adopter of AI coding—once I learned to treat it as a copilot that helps me brainstorm and plan, and execute on my terms—here are my tips to you.</p>
-<h3 id="-do">✅ Do</h3>
-<ul>
-<li>
-<p>Find skeptical engineers who are heavily passionate and adopters of AI coding, and let them lead this effort, while you support and sponsor them.</p>
-</li>
-<li>
-<p>Talk to team leads to give engineers time to learn and experiment. AI-assisted coding is not vibe-coding—it&rsquo;s a skill that takes time to develop. Expect a learning curve before you see the gains.</p>
-</li>
-<li>
-<p>Develop a healthy sense of skepticism yourself and beware of the AI-demo trap. People will show you sexy AI generated demos they made in a day, where previously that would take a month. Dig deeper and try to track and understand the rotten parts under the hood. Ask the skeptical for their POV.</p>
-</li>
-</ul>
-<h3 id="-dont">❌ Don&rsquo;t</h3>
-<ul>
-<li>
-<p>Don&rsquo;t call it vibe-coding. Terminology can arouse feelings. Not every AI coding is vibe coding. There are much safer and reliable ways to do AI coding. You can call it AI-assisted coding.</p>
-</li>
-<li>
-<p>Don&rsquo;t dismiss the skeptical. Listen to them and understand their POV, but challenge them, because they must adapt to the new world.</p>
-</li>
-<li>
-<p>Don&rsquo;t allow non-engineers to hand over vibe-coded solutions and demand engineers to deploy it (seen too many of these stories on reddit). Make it clear that vibe coded solutions are only for POCs.</p>
-</li>
-</ul>
-<hr>
-<p>🎯 The AI-first transformation won&rsquo;t come entirely from the top down—though leadership support is essential. It&rsquo;ll come from winning over the people closest to the code.</p>
+<p>So, as a skeptical person who was an early adopter of AI coding—once I learned to treat it as a <strong>copilot that helps me brainstorm and plan, and execute on my terms</strong>—here are my tips to you.</p>
+<h3 id="-do">✅ Do:</h3>
+<ol>
+<li>Find skeptical engineers who are heavily passionate and adopters of AI coding, and let them lead this effort, while you support and sponsor them.</li>
+<li>Talk to team leads to give engineers time to learn and experiment. AI-assisted coding is not vibe-coding—it&rsquo;s a skill that takes time to develop. Expect a learning curve before you see the gains.</li>
+<li>Develop a healthy sense of skepticism yourself and beware of the AI-demo trap. People will show you sexy AI generated demos they made in a day, where previously that would take a month. Dig deeper and try to track and understand the rotten parts under the hood. Ask the skeptical for their POV.</li>
+</ol>
+<h3 id="-dont">❌ Don&rsquo;t:</h3>
+<ol>
+<li>Don&rsquo;t call it vibe-coding. Terminology can arouse feelings. Not every AI coding is vibe coding. There are much safer and reliable ways to do AI coding. You can call it AI-assisted coding.</li>
+<li>Don&rsquo;t dismiss the skeptical. Listen to them and understand their POV, but challenge them, because they must adapt to the new world.</li>
+<li>Don&rsquo;t allow non-engineers to hand over vibe-coded solutions and demand engineers to deploy it (seen too many of these stories on reddit). Make it clear that vibe coded solutions are only for POCs.</li>
+</ol>
+<p>🎯 The AI-first transformation won&rsquo;t come entirely from the top down—though leadership support is essential. It&rsquo;ll come from <strong>winning over the people closest to the code</strong>.</p>
 
 </div>
 
