deploy: yarelm/blog@b36af926117eb3b0ef4d95e2090dbb561b98a961

--- a/ai-first-engineering-culture/index.html
+++ b/ai-first-engineering-culture/index.html
@@ -103,10 +103,18 @@
 <h3 id="why-theyre-skeptical">Why They&rsquo;re Skeptical</h3>
 <p>Imagine the process they have gone through that reinforced their skepticism:</p>
 <ul>
-<li>They played with vibe-coding a few times, and it ended up as a big ball of mud. They know the meaning of it - they can&rsquo;t maintain it over time, and it&rsquo;s a tech debt factory.</li>
-<li>All of their LinkedIn feed is filled with non-technical influencers who keep bragging about AI (&ldquo;I made a website in 5 minutes, it&rsquo;s the end of software engineering&rdquo;, &ldquo;I can do everything with n8n, no-code for the win&rdquo;)</li>
-<li>AI-slop is everywhere.</li>
-<li>Some of them may have already handed over vibe-coded code built in 2 hours by non-technical folks asking them to make it &ldquo;production-ready&rdquo; and they know that it&rsquo;s a ticking time-bomb. They know that if they take ownership of that, they invite chaos.</li>
+<li>
+<p>They played with vibe-coding a few times, and it ended up as a big ball of mud. They know the meaning of it - they can&rsquo;t maintain it over time, and it&rsquo;s a tech debt factory.</p>
+</li>
+<li>
+<p>All of their LinkedIn feed is filled with non-technical influencers who keep bragging about AI (&ldquo;I made a website in 5 minutes, it&rsquo;s the end of software engineering&rdquo;, &ldquo;I can do everything with n8n, no-code for the win&rdquo;)</p>
+</li>
+<li>
+<p>AI-slop is everywhere.</p>
+</li>
+<li>
+<p>Some of them may have already handed over vibe-coded code built in 2 hours by non-technical folks asking them to make it &ldquo;production-ready&rdquo; and they know that it&rsquo;s a ticking time-bomb. They know that if they take ownership of that, they invite chaos.</p>
+</li>
 </ul>
 <p>They are not wrong there. These skeptical folks have some good points, because they <strong>care about production and high-quality</strong>, they want to keep the tech reliable and working so that the <strong>business will prosper</strong>.
 They know the devil is in the details, and the concerning things that they see can&rsquo;t always be seen from up above.</p>
@@ -119,15 +127,27 @@ They know the devil is in the details, and the concerning things that they see c
 <h2 id="tips-on-ai-coding-enablement">Tips on AI-coding enablement</h2>
 <h3 id="-do">✅ Do</h3>
 <ol>
-<li>Find skeptical engineers who&rsquo;ve become passionate AI adopters—people respected by their peers. Let them lead this effort while you sponsor and support them.</li>
-<li>Talk to team leads to give engineers time to learn and experiment. AI-assisted coding is not vibe-coding—it&rsquo;s a skill that takes time to develop. Expect a productivity plateau before you see the gains.</li>
-<li>Develop healthy skepticism yourself. When someone shows you a sexy demo built using AI in a few hours, dig deeper—ask the skeptics what&rsquo;s rotting under the hood.</li>
+<li>
+<p>Find skeptical engineers who&rsquo;ve become passionate AI adopters—people respected by their peers. Let them lead this effort while you sponsor and support them.</p>
+</li>
+<li>
+<p>Talk to team leads to give engineers time to learn and experiment. AI-assisted coding is not vibe-coding—it&rsquo;s a skill that takes time to develop. Expect a productivity plateau before you see the gains.</p>
+</li>
+<li>
+<p>Develop healthy skepticism yourself. When someone shows you a sexy demo built using AI in a few hours, dig deeper—ask the skeptics what&rsquo;s rotting under the hood.</p>
+</li>
 </ol>
 <h3 id="-dont">❌ Don&rsquo;t</h3>
 <ol>
-<li>Don&rsquo;t call AI coding as vibe-coding. Terminology can trigger emotions. Vibe-coding is when the code doesn&rsquo;t matter. Not every AI coding is vibe coding. There are much safer and reliable ways to do AI coding for production. You can call it AI-assisted coding.</li>
-<li>Don&rsquo;t dismiss the skeptical. Listen to them and understand their perspective, give them time, but challenge them, because they must adapt to the new world.</li>
-<li>Don&rsquo;t allow non-engineers to hand over vibe-coded solutions and expect engineers to deploy them to production. Make it clear: vibe-coded work is for POCs and reference only. Engineers who own production systems shouldn&rsquo;t be bypassed. This is exactly the kind of thing that reinforces your skeptics&rsquo; distrust—and proves them right.</li>
+<li>
+<p>Don&rsquo;t call AI coding as vibe-coding. Terminology can trigger emotions. Vibe-coding is when the code doesn&rsquo;t matter. Not every AI coding is vibe coding. There are much safer and reliable ways to do AI coding for production. You can call it AI-assisted coding.</p>
+</li>
+<li>
+<p>Don&rsquo;t dismiss the skeptical. Listen to them and understand their perspective, give them time, but challenge them, because they must adapt to the new world.</p>
+</li>
+<li>
+<p>Don&rsquo;t allow non-engineers to hand over vibe-coded solutions and expect engineers to deploy them to production. Make it clear: vibe-coded work is for POCs and reference only. Engineers who own production systems shouldn&rsquo;t be bypassed. This is exactly the kind of thing that reinforces your skeptics&rsquo; distrust—and proves them right.</p>
+</li>
 </ol>
 <p>🎯 The AI-first transformation requires both top-down and bottom-up—leadership support <em>and</em> buy-in from the people closest to the code. Neither alone is enough. As a manager, you&rsquo;re the bridge—and your skeptics are the first ones to bring across. Win them, and you win the team.</p>
 
