deploy: yarelm/blog@68100603d6ac09dc10972fca270700d5371bb063

--- a/ai-first-engineering-culture/index.html
+++ b/ai-first-engineering-culture/index.html
@@ -131,7 +131,7 @@ They know the devil is in the details, and the concerning things that they see c
 <p>Find skeptical engineers who&rsquo;ve become passionate AI adopters—people respected by their peers. Let them lead this effort while you sponsor and support them.</p>
 </li>
 <li>
-<p>Talk to team leads to give engineers time to learn and experiment. AI-assisted coding is not vibe-coding—it&rsquo;s a skill that takes time to develop. Expect a productivity plateau before you see the gains.</p>
+<p>Talk to team leads to give engineers time to learn and experiment. AI-assisted coding is not vibe-coding—it&rsquo;s a skill that takes time to develop. Expect an initial dip in productivity before you see the gains.</p>
 </li>
 <li>
 <p>Develop healthy skepticism yourself. When someone shows you a sexy demo built using AI in a few hours, dig deeper—ask the skeptics what&rsquo;s rotting under the hood.</p>
