deploy: yarelm/blog@df0b29472d1b05674668a2b4e48369155e4fe170

--- a/ai-first-engineering-culture/index.html
+++ b/ai-first-engineering-culture/index.html
@@ -97,9 +97,10 @@
 <p>In every org, there are the &ldquo;<strong>AI skeptical</strong>&rdquo; engineers.</p>
 <p>These are usually the more senior folks, and those that tend to be more technical than others.</p>
 <p>They are the ones who&rsquo;ve seen many phases of hype over their careers, and they developed a mature level of skepticism. They say AI is too hyped.</p>
-<p>To get your engineering team to be AI-first, you have to <strong>win them over</strong>. Because these skeptics are often the more senior folks, they tend to lead and influence where the wind is blowing within their teams. If you make them AI-first, others will follow.</p>
+<p>While on the same time, you may see the PMs, the designers, the analysts and other non-engineers in org, swiftly adapt AI and use vibe-coding heavily, while being deeply passionate about it. What&rsquo;s going on? Shouldn&rsquo;t the engieering be on the bleeding edge?</p>
+<p>To get your engineering team to be AI-first, you have to <strong>win them over</strong>. Because these AI skeptics are often the more senior eng, they tend to lead and influence where the wind is blowing within their teams. If you make them AI-first, others will follow.</p>
 <p>As a manager, you may think &ldquo;they don&rsquo;t want to use AI because they are afraid it will replace them&rdquo;, or other similar thoughts.</p>
-<p>That&rsquo;s mostly not true. I&rsquo;ve talked to a lot of them, and as a technical skeptical person myself, I can understand why they developed that skepticism. To win them over, you need to understand their way of thinking.</p>
+<p>That&rsquo;s mostly not true. And as a technical skeptical person myself, I can understand why they developed that skepticism. To win them over, you need to understand their way of thinking.</p>
 <h3 id="why-theyre-skeptical">Why They&rsquo;re Skeptical</h3>
 <p>Imagine the process they have gone through that reinforced their skepticism:</p>
 <ul>
@@ -116,13 +117,13 @@
 <p>Some of them may have already handed over vibe-coded code built in 2 hours by non-technical folks asking them to make it &ldquo;production-ready&rdquo; and they know that it&rsquo;s a ticking time-bomb. They know that if they take ownership of that, they invite chaos.</p>
 </li>
 </ul>
-<p>They are not wrong there. These skeptical folks have some good points, because they <strong>care about production and high-quality</strong>, they want to keep the tech reliable and working so that the <strong>business will prosper</strong>.
+<p>They are not wrong there. These skeptical folks have some good points, because they <strong>care about production and high-quality</strong>, they want to keep the tech reliable and working so that the <strong>business will grow and prosper</strong>.
 They know the devil is in the details, and the concerning things that they see can&rsquo;t always be seen from up above.</p>
 <p>But they are wrong in allowing the skepticism to control them, preventing them from adopting AI and gaining productivity boost.</p>
 <p>So how do you actually move them? I can share what worked for me.</p>
-<p>I was never a big coding enthusiast; I cared more about architecture, and coding was just a tool. Around the same time, I was building AI agents, so I understood the potential.</p>
+<p>I&rsquo;m not a coding purist; I care more about architecture, the big-picture, and coding was just a tool for me. Around the same time, I was building AI agents, so I understood the potential.</p>
 <p>I forced myself to stop writing code manually for a while and lean fully on AI. It was clunky at first, but after a period of experimenting, I noticed I was genuinely more productive. The key insight: AI-generated code is verifiable. Once you put a senior engineer in the loop, it becomes controllable.</p>
-<p>That&rsquo;s when I started treating AI as a <strong>copilot that helps me brainstorm, plan, and execute on my terms</strong>—and it stuck. But I needed that trial and error period to get there.</p>
+<p>That&rsquo;s when I started treating AI as a <strong>copilot that helps me brainstorm, plan, and execute on my terms</strong>—and it stuck. But I needed that trial and error period to get there. Once other engineers noticed that, they followed.</p>
 <p>When I was working with teams to help them adopt AI-assisted coding, that skeptical pattern became clear to me, and I knew how to approach them because I can speak their language and see them eye-to-eye. And that builds trust.</p>
 <h2 id="tips-on-ai-coding-enablement">Tips on AI-coding enablement</h2>
 <h3 id="-do">✅ Do</h3>
