deploy: yarelm/blog@8498796cfa53326686c310f934b116c56a7f5dfc

--- a/ai-first-engineering-culture/index.html
+++ b/ai-first-engineering-culture/index.html
@@ -137,6 +137,9 @@ They know the devil is in the details, and the concerning things that they see c
 <li>
 <p>Develop healthy skepticism yourself. When someone shows you a sexy demo built using AI in a few hours, dig deeper—ask the skeptics what&rsquo;s rotting under the hood.</p>
 </li>
+<li>
+<p>Start having forums, guilds, and discussions about AI safety - Listen to the people on the trenches - what concerns them? how do we keep our quality bar high while using AI? how do we adapt the SDLC to fit AI? How do we do proper code reviews for AI-generated code?</p>
+</li>
 </ol>
 <h3 id="-dont">❌ Don&rsquo;t</h3>
 <ol>
