deploy: yarelm/blog@ae043f06fc1689f06ba5454f03608f612198b9c9

--- a/ai-first-engineering-culture/index.html
+++ b/ai-first-engineering-culture/index.html
@@ -97,8 +97,8 @@
 <p>In every org, there are the &ldquo;<strong>AI skeptical</strong>&rdquo; engineers.</p>
 <p>These are usually the more senior folks, and those that tend to be more technical than others.</p>
 <p>They are the ones who&rsquo;ve seen many phases of hype over their careers, and they developed a mature level of skepticism. They say AI is too hyped.</p>
-<p>While on the same time, you may see the PMs, the designers, the analysts and other non-engineers in org, swiftly adapt AI and use vibe-coding heavily, while being deeply passionate about it. What&rsquo;s going on? Shouldn&rsquo;t the engieering be on the bleeding edge?</p>
-<p>To get your engineering team to be AI-first, you have to <strong>win them over</strong>. Because these AI skeptics are often the more senior eng, they tend to lead and influence where the wind is blowing within their teams. If you make them AI-first, others will follow.</p>
+<p>While at the same time, you may see the PMs, the designers, the analysts and other non-engineers in the org, swiftly adopt AI and use vibe-coding heavily, while being deeply passionate about it. What&rsquo;s going on? Shouldn&rsquo;t the engineering be on the bleeding edge?</p>
+<p>To get your engineering team to be AI-first, you have to <strong>win them over</strong>. Because these AI skeptics are often the more senior engineers, they tend to lead and influence where the wind is blowing within their teams. If you make them AI-first, others will follow.</p>
 <p>As a manager, you may think &ldquo;they don&rsquo;t want to use AI because they are afraid it will replace them&rdquo;, or other similar thoughts.</p>
 <p>That&rsquo;s mostly not true. And as a technical skeptical person myself, I can understand why they developed that skepticism. To win them over, you need to understand their way of thinking.</p>
 <h3 id="why-theyre-skeptical">Why They&rsquo;re Skeptical</h3>
@@ -138,7 +138,7 @@ They know the devil is in the details, and the concerning things that they see c
 <p>Develop healthy skepticism yourself. When someone shows you a sexy demo built using AI in a few hours, dig deeper—ask the skeptics what&rsquo;s rotting under the hood.</p>
 </li>
 <li>
-<p>Start having forums, guilds, and discussions about AI safety - Listen to the people on the trenches - what concerns them? how do we keep our quality bar high while using AI? how do we adapt the SDLC to fit AI? How do we do proper code reviews for AI-generated code?</p>
+<p>Start having forums, guilds, and discussions about AI safety - Listen to the people in the trenches - What concerns them? How do we keep our quality bar high while using AI? How do we adapt the SDLC to fit AI? How do we do proper code reviews for AI-generated code?</p>
 </li>
 </ol>
 <h3 id="-dont">❌ Don&rsquo;t</h3>
