deploy: yarelm/blog@31a6c43db6e4951db813260fd58f1a49447b29d3

--- a/ai-first-engineering-culture/index.html
+++ b/ai-first-engineering-culture/index.html
@@ -93,39 +93,51 @@
 
     <p>The engineers most resistant to AI are often your most senior. They&rsquo;re also the ones you need to win over first.</p>
 <p>You probably believe that AI is a huge productivity boost for engineers. And that engineers who do not adopt AI will find themselves with a huge disadvantage in the near future, or even out of job.</p>
-<p>You have a really valid point there. But why is that claim not enough to move the needle?</p>
+<p>Why is that claim not enough to move the needle?</p>
+<p>Because productivity claims don&rsquo;t address what skeptics actually care about: quality and maintainability.</p>
 <p>In every org, there are the &ldquo;<strong>AI skeptical</strong>&rdquo; engineers.</p>
-<p>These are usually the more senior folks, and those that tend to be more technical than others.</p>
-<p>They are the ones who&rsquo;ve seen many phases of hype over their careers, and they developed a mature level of skepticism. They say AI is too hyped.</p>
-<p>While at the same time, you may see the PMs, the designers, the analysts and other non-engineers in the org, swiftly adopt AI and use vibe-coding heavily, while being deeply passionate about it. What&rsquo;s going on? Shouldn&rsquo;t the engineering be on the bleeding edge?</p>
-<p>To get your engineering team to be AI-first, you have to <strong>win them over</strong>. Because these AI skeptics are often the more senior engineers, they tend to lead and influence where the wind is blowing within their teams. If you make them AI-first, others will follow.</p>
+<p>These are usually the more senior folks, and often those that tend to be more technical than others.</p>
+<p>They are the ones who&rsquo;ve already seen phases of hype over their careers, and they developed a mature level of skepticism. They say AI is too hyped.</p>
+<p>While at the same time, you may see the PMs, the designers, the analysts and other non-engineers in the org, swiftly adopt AI and use vibe-coding heavily, while being deeply passionate about it. What&rsquo;s going on? Shouldn&rsquo;t the engineering be the pioneers of new technology?</p>
+<p>To get your engineering team to be AI-first, you have to <strong>win them over</strong>. Because those AI skeptics are often the more senior engineers, they tend to lead and influence where the wind is blowing within their teams. If you make them AI-first, others will follow.</p>
 <p>As a manager, you may think &ldquo;they don&rsquo;t want to use AI because they are afraid it will replace them&rdquo;, or other similar thoughts.</p>
-<p>That&rsquo;s mostly not true. And as a technical skeptical person myself, I can understand why they developed that skepticism. To win them over, you need to understand their way of thinking.</p>
-<h3 id="why-theyre-skeptical">Why They&rsquo;re Skeptical</h3>
+<p>That&rsquo;s mostly not true. And as a technical skeptical person myself, I can understand why they developed that skepticism. To win them over, you need to understand their point of view.</p>
+<h2 id="why-theyre-skeptical">Why They&rsquo;re Skeptical</h2>
 <p>Imagine the process they have gone through that reinforced their skepticism:</p>
 <ul>
 <li>
-<p>They played with vibe-coding a few times, and it ended up as a big ball of mud. They know the meaning of it - they can&rsquo;t maintain it over time, and it&rsquo;s a tech debt factory.</p>
+<p>They played with vibe-coding a few times, and it ended up as a big ball of mud. They know the meaning of it - it&rsquo;s not maintainable over time, and it&rsquo;s a tech debt factory.</p>
 </li>
 <li>
-<p>All of their LinkedIn feed is filled with non-technical influencers who keep bragging about AI (&ldquo;I made a website in 5 minutes, it&rsquo;s the end of software engineering&rdquo;, &ldquo;I can do everything with n8n, no-code for the win&rdquo;)</p>
+<p>Their LinkedIn feed is filled with non-technical influencers who keep bragging about AI (&ldquo;I made a website in 5 minutes, it&rsquo;s the end of software engineering&rdquo;, &ldquo;I can do everything with n8n, no-code for the win&rdquo;)</p>
 </li>
 <li>
-<p>AI-slop is everywhere.</p>
+<p>AI-slop is everywhere. They become very picky and defensive.</p>
 </li>
 <li>
-<p>Some of them may have already handed over vibe-coded code built in 2 hours by non-technical folks asking them to make it &ldquo;production-ready&rdquo; and they know that it&rsquo;s a ticking time-bomb. They know that if they take ownership of that, they invite chaos.</p>
+<p>Imagine the effort they make everyday to keep the quality bar high. And then, someone, maybe a non-technical folk, is handing them a vibe-coded PR with 200 files changed, and asking them to deploy it or make it &ldquo;production-ready&rdquo;. They know it&rsquo;s a ticking time-bomb. They know that if they take ownership of that, they invite chaos.</p>
 </li>
 </ul>
-<p>They are not wrong there. These skeptical folks have some good points, because they <strong>care about production and high-quality</strong>, they want to keep the tech reliable and working so that the <strong>business will grow and prosper</strong>.
-They know the devil is in the details, and the concerning things that they see can&rsquo;t always be seen from up above.</p>
-<p>But they are wrong in allowing the skepticism to control them, preventing them from adopting AI and gaining productivity boost.</p>
-<p>So how do you actually move them? I can share what worked for me.</p>
-<p>I&rsquo;m not a coding purist; I care more about architecture, the big-picture, and coding was just a tool for me. Around the same time, I was building AI agents, so I understood the potential.</p>
-<p>I forced myself to stop writing code manually for a while and lean fully on AI. It was clunky at first, but after a period of experimenting, I noticed I was genuinely more productive. The key insight: AI-generated code is verifiable. Once you put a senior engineer in the loop, it becomes controllable.</p>
+<p>They are not wrong there. These skeptical folks have some good points, because they <strong>care deeply about production and high-quality</strong>, they want to keep the tech reliable and working so that the <strong>business will grow and prosper</strong>.
+They know the devil is in the details, and the concerning things that they see can&rsquo;t always be seen clearly from up above.</p>
+<p>But they are wrong in allowing the skepticism to control them, preventing them from adopting AI that will allow them to be more productive.</p>
+<h2 id="what-worked-for-me">What Worked for Me</h2>
+<p>I was building AI agents at the time, so I had a sense of the potential. I forced myself to stop writing code manually for a while and lean fully on AI. It was clunky at first, and the results were not up to my standards. But after a period of experimenting, I noticed I was genuinely more productive. The key insight: AI-generated code is verifiable, so you can verify the logic works. But once you put a senior engineer in the loop, you can make it more controllable.</p>
 <p>That&rsquo;s when I started treating AI as a <strong>copilot that helps me brainstorm, plan, and execute on my terms</strong>—and it stuck. But I needed that trial and error period to get there. Once other engineers noticed that, they followed.</p>
-<p>When I was working with teams to help them adopt AI-assisted coding, that skeptical pattern became clear to me, and I knew how to approach them because I can speak their language and see them eye-to-eye. And that builds trust.</p>
-<h2 id="tips-on-ai-coding-enablement">Tips on AI-coding enablement</h2>
+<p>When I was working with teams to help them adopt AI-assisted coding, that skeptical pattern became clear to me, and I knew how to approach them because I can speak their language and understand their concerns. And that builds trust.</p>
+<h2 id="winning-over-your-skeptics">Winning Over Your Skeptics</h2>
+<h3 id="-dont">❌ Don&rsquo;t</h3>
+<ol>
+<li>
+<p>Don&rsquo;t call AI coding as vibe-coding. Terminology can trigger emotions. Vibe-coding is when the code doesn&rsquo;t matter. Not every AI coding is vibe coding. There are much safer and reliable ways to do AI coding for production. You can call it AI-assisted coding.</p>
+</li>
+<li>
+<p>Don&rsquo;t dismiss the skeptical. Listen to them and understand their perspective, give them time, but challenge them, because they must adapt to the new world.</p>
+</li>
+<li>
+<p>Don&rsquo;t allow non-engineers to hand over vibe-coded solutions and expect engineers to deploy them to production. Make it clear: vibe-coded work is for POCs and reference only. Engineers who own production systems shouldn&rsquo;t be bypassed. This is exactly the kind of thing that reinforces your skeptics&rsquo; distrust—and proves them right.</p>
+</li>
+</ol>
 <h3 id="-do">✅ Do</h3>
 <ol>
 <li>
@@ -141,19 +153,8 @@ They know the devil is in the details, and the concerning things that they see c
 <p>Start having forums, guilds, and discussions about AI safety - Listen to the people in the trenches - What concerns them? How do we keep our quality bar high while using AI? How do we adapt the SDLC to fit AI? How do we do proper code reviews for AI-generated code?</p>
 </li>
 </ol>
-<h3 id="-dont">❌ Don&rsquo;t</h3>
-<ol>
-<li>
-<p>Don&rsquo;t call AI coding as vibe-coding. Terminology can trigger emotions. Vibe-coding is when the code doesn&rsquo;t matter. Not every AI coding is vibe coding. There are much safer and reliable ways to do AI coding for production. You can call it AI-assisted coding.</p>
-</li>
-<li>
-<p>Don&rsquo;t dismiss the skeptical. Listen to them and understand their perspective, give them time, but challenge them, because they must adapt to the new world.</p>
-</li>
-<li>
-<p>Don&rsquo;t allow non-engineers to hand over vibe-coded solutions and expect engineers to deploy them to production. Make it clear: vibe-coded work is for POCs and reference only. Engineers who own production systems shouldn&rsquo;t be bypassed. This is exactly the kind of thing that reinforces your skeptics&rsquo; distrust—and proves them right.</p>
-</li>
-</ol>
-<p>🎯 The AI-first transformation requires both top-down and bottom-up—leadership support <em>and</em> buy-in from the people closest to the code. Neither alone is enough. As a manager, you&rsquo;re the bridge—and your skeptics are the first ones to bring across. Win them, and you win the team.</p>
+<h2 id="the-bottom-line">The Bottom Line</h2>
+<p>The AI-first transformation requires both top-down and bottom-up—leadership support <em>and</em> buy-in from the people closest to the code. Neither alone is enough. As a manager, you&rsquo;re the bridge—and your skeptics are the first ones to bring across. Win them, and you win the team.</p>
 
 </div>
 
