deploy: yarelm/blog@fedc65f3ac28622746d0e339610ebc832ee73106

--- a/ai-first-engineering-culture/index.html
+++ b/ai-first-engineering-culture/index.html
@@ -109,7 +109,7 @@
 <p>They played with vibe-coding a few times, and it ended up as a big ball of mud. They know the meaning of it - it&rsquo;s not maintainable over time, and it&rsquo;s a tech debt factory.</p>
 </li>
 <li>
-<p>Their LinkedIn feed is filled with non-technical influencers who keep bragging about AI (&ldquo;I made a website in 5 minutes, it&rsquo;s the end of software engineering&rdquo;, &ldquo;I can do everything with n8n, no-code for the win&rdquo;)</p>
+<p>Their LinkedIn feed is filled with non-technical influencers who keep bragging about AI (&ldquo;I made a website in 5 minutes, it&rsquo;s the end of software engineering&rdquo;, &ldquo;I can do everything with n8n, no-code for the win&rdquo;). But these people never owned production.</p>
 </li>
 <li>
 <p>AI-slop is everywhere. They become very picky and defensive.</p>
